--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -3,3 +3,6 @@
 {{ partial "bg-list-js.html" . }}
 <script defer src="/js/bg-switch.js"></script>
 
+<link rel="preload" href="{{ "fonts/FiraCodeNerdFont-Regular.woff2" | relURL }}" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="{{ "fonts/NotoSansSC-Regular.woff2" | relURL }}" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="{{ "fonts/LXGWWenKai-Regular.woff2" | relURL }}" as="font" type="font/woff2" crossorigin>
